# uplite

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  MONITORING_GUIDE.md  PROJECT_SUMMARY.md  README.md  add_logo_field.py  docker-compose.dev.yml  docker-compose.yml  manage.py  monitor_service.py  pyproject.toml  setup.sh  start_app.py  test_connection.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/: Dockerfile  init-db.sql
src/uplite/: __init__.py  app.py
src/uplite/auth/: __init__.py  forms.py
src/uplite/config/: settings.py
src/uplite/models/: __init__.py  connection.py  connection_history.py  user.py  widget_config.py
src/uplite/static/css/: main.css
src/uplite/static/js/: image-selector.js  main.js
src/uplite/templates/: base.html  index.html
src/uplite/templates/auth/: login.html  register.html
src/uplite/templates/dashboard/: connection_stats.html  connections.html  index.html  index.html.backup-complex-charts  index.html.backup-single-column  settings.html  widgets.html
src/uplite/utils/: __init__.py  connection_checker.py  image_suggester.py
src/uplite/views/: __init__.py  api.py  api_updates.py  auth.py  dashboard.py  main.py
src/uplite/widgets/: __init__.py  base_widget.py  widget_manager.py
src/uplite/widgets/builtin/: __init__.py  connection_monitor.py  logs_viewer.py  service_status.py  system_status.py
tests/: test_app.py
